--- a/src/main/resources/com/example/diplom1/DiagnosticMenu.fxml
+++ b/src/main/resources/com/example/diplom1/DiagnosticMenu.fxml
@@ -5,58 +5,101 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="582.0" prefWidth="970.0" style="-fx-background-color: #d76604;"
-            stylesheets="@textFieldCss.css,@cssFile.css " xmlns="http://javafx.com/javafx/21"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
+<AnchorPane prefHeight="582.0" prefWidth="970.0" style="-fx-background-color: #d76604;" stylesheets="@textFieldCss.css,@cssFile.css " xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
     <children>
-        <TextField fx:id="Tmax" layoutX="424.0" layoutY="22.0" prefHeight="27.0" prefWidth="245.0"
-                   style="-fx-background-color: white;" styleClass="text-field-orange"/>
-        <Label layoutX="38.0" layoutY="22.0" prefHeight="27.0" prefWidth="363.0" style="-fx-background-color: white;"
-               styleClass="text-field-orange" text="Введите верхний технический допуск Tmax:">
+      <Pane layoutX="364.0" layoutY="-1.0" prefHeight="156.0" prefWidth="175.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="0.4952380955219269" blue="1.0" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
+      <Pane layoutX="752.0" layoutY="-1.0" prefHeight="156.0" prefWidth="219.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="0.07619048655033112" blue="1.0" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
+      <Pane layoutX="533.0" layoutY="-1.0" prefHeight="156.0" prefWidth="225.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="0.30476194620132446" blue="1.0" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
+      <Pane layoutX="203.0" prefHeight="156.0" prefWidth="169.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="0.5904762148857117" blue="1.0" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
+      <Pane prefHeight="156.0" prefWidth="219.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="0.6857143044471741" blue="1.0" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
+      <Pane layoutX="-5.0" layoutY="152.0" prefHeight="428.0" prefWidth="976.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="1.0" green="0.4000000059604645" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
+        <TextField fx:id="Tmax" layoutX="424.0" layoutY="22.0" prefHeight="27.0" prefWidth="245.0" style="-fx-background-color: white;" styleClass="text-field-orange" />
+        <Label layoutX="38.0" layoutY="22.0" prefHeight="27.0" prefWidth="363.0" style="-fx-background-color: white;" styleClass="text-field-orange" text="Введите верхний технический допуск Tmax:">
             <font>
-                <Font name="System Italic" size="18.0"/>
+                <Font name="System Italic" size="18.0" />
             </font>
         </Label>
-        <TextField fx:id="Tmin" layoutX="424.0" layoutY="63.0" prefHeight="27.0" prefWidth="245.0"
-                   style="-fx-background-color: white;" styleClass="text-field-orange"/>
-        <Label layoutX="38.0" layoutY="63.0" prefHeight="27.0" prefWidth="363.0" style="-fx-background-color: white;"
-               styleClass="text-field-orange" text="Введите нижний технический допуск Tmin:">
+        <TextField fx:id="Tmin" layoutX="424.0" layoutY="63.0" prefHeight="27.0" prefWidth="245.0" style="-fx-background-color: white;" styleClass="text-field-orange" />
+        <Label layoutX="38.0" layoutY="63.0" prefHeight="27.0" prefWidth="363.0" style="-fx-background-color: white;" styleClass="text-field-orange" text="Введите нижний технический допуск Tmin:">
             <font>
-                <Font size="18.0"/>
+                <Font size="18.0" />
             </font>
         </Label>
-        <TextField fx:id="deltaT" layoutX="424.0" layoutY="106.0" prefHeight="27.0" prefWidth="245.0"
-                   style="-fx-background-color: white;" styleClass="text-field-orange"/>
-        <Label layoutX="38.0" layoutY="106.0" prefHeight="27.0" prefWidth="363.0" style="-fx-background-color: white;"
-               styleClass="text-field-orange" text="Введите погрешность канала ΔT">
+        <TextField fx:id="deltaT" layoutX="424.0" layoutY="106.0" prefHeight="27.0" prefWidth="245.0" style="-fx-background-color: white;" styleClass="text-field-orange" />
+        <Label layoutX="38.0" layoutY="106.0" prefHeight="27.0" prefWidth="363.0" style="-fx-background-color: white;" styleClass="text-field-orange" text="Введите погрешность канала ΔT">
             <font>
-                <Font name="System Italic" size="18.0"/>
+                <Font name="System Italic" size="18.0" />
             </font>
         </Label>
-        <Button fx:id="Back" layoutY="511.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="71.0"
-                prefWidth="970.0"
-                style="             -fx-padding: 8 15 15 15;     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;   -fx-background-radius: 8;     -fx-background-color:    linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),         #9d4024,         #d86e3a,      #ff6f1b;     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );   "
-                styleClass="button-animated" text="Вернуться" textFill="WHITE">
+        <Button fx:id="Back" layoutY="511.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="71.0" prefWidth="970.0" style="             -fx-padding: 8 15 15 15;     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;   -fx-background-radius: 8;     -fx-background-color:    linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),         #9d4024,         #d86e3a,      #ff6f1b;     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );   " styleClass="button-animated" text="Вернуться" textFill="WHITE">
             <font>
-                <Font name="System Italic" size="30.0"/>
+                <Font name="System Italic" size="30.0" />
             </font>
         </Button>
-        <TableView fx:id="tableView" layoutX="92.0" layoutY="154.0" prefHeight="298.0" prefWidth="807.0">
+        <TableView fx:id="tableView" layoutX="89.0" layoutY="176.0" prefHeight="298.0" prefWidth="807.0">
             <columns>
-                <TableColumn fx:id="error" prefWidth="275.0" text="неисправности"/>
-                <TableColumn fx:id="krView" minWidth="0.0" prefWidth="364.0" text="Критерии обнаружения "/>
-                <TableColumn fx:id="trueFalse" prefWidth="147.0" text="Наличие"/>
+                <TableColumn fx:id="error" prefWidth="275.0" text="неисправности" />
+                <TableColumn fx:id="krView" minWidth="0.0" prefWidth="364.0" text="Критерии обнаружения " />
+                <TableColumn fx:id="trueFalse" prefWidth="147.0" text="Наличие" />
             </columns>
         </TableView>
-        <Button id="Check" fx:id="Check" layoutX="706.0" layoutY="41.0" mnemonicParsing="false"
-                onAction="#handleButtonAction" prefHeight="71.0" prefWidth="219.0"
-                style="             -fx-padding: 8 15 15 15;     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;   -fx-background-radius: 8;     -fx-background-color:    linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),         #9d4024,         #d86e3a,      #ff6f1b;     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );   "
-                styleClass="button-animated" text="Проверка" textFill="WHITE">
+        <Button id="Check" fx:id="Check" layoutX="706.0" layoutY="41.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="71.0" prefWidth="219.0" style="             -fx-padding: 8 15 15 15;     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;   -fx-background-radius: 8;     -fx-background-color:    linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),         #9d4024,         #d86e3a,      #ff6f1b;     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );   " styleClass="button-animated" text="Проверка" textFill="WHITE">
             <font>
-                <Font name="System Italic" size="30.0"/>
+                <Font name="System Italic" size="30.0" />
             </font>
         </Button>
     </children>
