--- a/src/main/resources/com/example/diplom1/Dinamic.fxml
+++ b/src/main/resources/com/example/diplom1/Dinamic.fxml
@@ -1,18 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.Shadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="873.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
+<AnchorPane prefHeight="500.0" prefWidth="873.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
    <children>
+      <Pane prefHeight="689.0" prefWidth="600.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="0.12999999523162842" green="1.0" blue="0.9730713963508606" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
+      <Pane layoutX="596.0" prefHeight="689.0" prefWidth="600.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="0.5904762148857117" blue="1.0" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
+      <Pane layoutX="-2.0" layoutY="2.0" prefHeight="46.0" prefWidth="1196.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color opacity="0.7900763154029846" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
+      <Pane layoutY="380.0" prefHeight="309.0" prefWidth="1196.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color opacity="0.7900763154029846" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
       <Text fill="DARKORANGE" layoutX="28.0" layoutY="413.0" strokeType="OUTSIDE" strokeWidth="0.0" text="В основу построения модели объекта  заложены уравнениятеплового баланса печи. Динамика печи представлена  дробно - рациональной функциейс запаздыванием. — Значения  температур в различных зонах печимогут служить промежуточными переменными, изменяющимися при изменениирасхода топлива. Исходя из этого и их особенностей технологическогопроцесса, печь обжига целесообразно разделить на пять зон, по числурегулируемых и контролируемых переменных — (значения температуры взонах). Тогда динамическая модель печи монет быть представлена вв виде последовательно соединенных пяти линейных динамических звеньев.каждое из которых описывает динамику i-зоны печи" textAlignment="JUSTIFY" wrappingWidth="1136.08203125">
          <font>
             <Font name="System Italic" size="22.0" />
          </font>
       </Text>
-      <Label layoutX="179.0" layoutY="-9.0" text="Динамическая модель печи обжига керамической плитки " textFill="#ff8c00">
+      <Label layoutX="179.0" layoutY="-2.0" text="Динамическая модель печи обжига керамической плитки " textFill="#ff8c00">
          <font>
             <Font name="System Italic" size="31.0" />
          </font>
@@ -22,7 +64,7 @@
             <Font name="System Italic" size="30.0" />
          </font>
       </Button>
-      <ImageView fitHeight="352.0" fitWidth="717.0" layoutX="240.0" layoutY="37.0">
+      <ImageView fitHeight="329.0" fitWidth="717.0" layoutX="240.0" layoutY="52.0">
          <image>
             <Image url="@../../../pictures/PhotoPhormul.png" />
          </image>
