--- a/src/main/resources/com/example/diplom1/Synthesis.fxml
+++ b/src/main/resources/com/example/diplom1/Synthesis.fxml
@@ -3,11 +3,50 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="641.0" prefWidth="1031.0" style="-fx-background-color: #d76604;" stylesheets="@textFieldCss.css,@cssFile.css " xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
     <children>
+      <Pane layoutX="-5.0" layoutY="-1.0" prefHeight="94.0" prefWidth="1054.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="1.0" green="0.8619047403335571" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
+      <Pane layoutX="3.0" layoutY="63.0" prefHeight="94.0" prefWidth="1045.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="1.0" green="0.7476190328598022" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
+      <Pane layoutX="5.0" layoutY="149.0" prefHeight="94.0" prefWidth="1040.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="1.0" green="0.6714285612106323" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
+      <Pane layoutY="428.0" prefHeight="200.0" prefWidth="1048.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="1.0" green="0.3285714387893677" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
         <Button fx:id="MainMath" layoutX="821.0" layoutY="37.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="46.0" prefWidth="172.0" style="-fx-background-color: #ff6f1b;" styleClass="button-animated" text="Расчет">
             <font>
                 <Font name="System Italic" size="22.0" />
@@ -89,5 +128,23 @@
                 <Font name="System Italic" size="22.0" />
             </font>
         </Button>
+      <Pane layoutY="334.0" prefHeight="94.0" prefWidth="1048.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="1.0" green="0.42352941632270813" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
+      <Pane layoutY="240.0" prefHeight="94.0" prefWidth="1045.0" style="-fx-background-color: white;">
+         <effect>
+            <Shadow>
+               <color>
+                  <Color red="1.0" green="0.538095235824585" />
+               </color>
+            </Shadow>
+         </effect>
+      </Pane>
     </children>
 </AnchorPane>
